--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
 </head>
   <body class="bg-zinc-950 text-zinc-100 antialiased h-screen overflow-hidden selection:bg-orange-500 selection:text-white">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
